test/input/error/CannotAssign2.source
program CannotAssign2;
methods
sdohtem;
declare
real r = 42
eralced;
margorp;